<resources>
    <string name="app_name">Тренажер ПДД</string>
    <string name="title_main">Статистика</string>
    <string name="title_tickets">Тренировки</string>
    <string name="title_rules">Теория</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back">Вернутьcя назад</string>
    <string name="question">Вопрос</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="pdd">Правлила дорожного движения</string>
    <string name="settings">Внешний вид</string>
    <string name="theme">Тема</string>
    <string name="delete_stat">Сбросить статистику</string>
    <string name="progress">Прогресс</string>
    <string name="questions">Вопросы</string>
    <string name="tickets">Билеты</string>
    <string name="themes">Темы</string>
    <string name="intensity">Интенсивность</string>
    <string name="delete_from_favourite">Удалить из избранного</string>
    <string name="next">Далее</string>
    <string name="modes">Режимы</string>
    <string name="know_awesome">Знаю отлично</string>
    <string name="from_800_questions">из 800 вопросов</string>
    <string name="not_know">Не знаю</string>
    <string name="know">Знаю</string>
    <string name="know_good">Знаю хорошо</string>
    <string name="begin_training">Начать тренировку</string>
    <string name="unavailable">Статистика недоступна! Для начала решите пару билетов.</string>
    <string name="performance">Успеваемость</string>
    <string name="save_progress">Сохранение прогресса</string>
    <string name="save_progress_txt">Сохранить</string>
    <string name="load_progress_txt">Загрузить</string>
    <string name="login">Войти</string>
    <string name="password">Пароль</string>
    <string name="mail">Эл. почта</string>
    <string name="forgotpassword">ЗАБЫЛИ ПАРОЛЬ?</string>
    <string name="name">Вашe имя</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="title_sign_recognition">Распознавание</string>

    <string-array name="rules_names">
        <item>1. Общие положения</item>
        <item>2. Общие обязанности водителей</item>
        <item>3. Применение специальных сигналов</item>
        <item>4. Обязанности пешеходов</item>
        <item>5. Обязанности пассажиров</item>
        <item>6. Сигналы светофора и регулировщика</item>
        <item>7. Применение аварийной сигнализации и знака аварийной остановки</item>
        <item>8. Начало движения, маневрирование</item>
        <item>9. Расположение транспортных средств на проезжей части</item>
        <item>10. Скорость движения</item>
        <item>11. Обгон, опережение, встречный разъезд</item>
        <item>12. Остановка и стоянка</item>
        <item>13. Проезд перекрестков</item>
        <item>14. Пешеходные переходы и места остановок маршрутных транспортных средств</item>
        <item>15. Движение через железнодорожные пути</item>
        <item>16. Движение по автомагистралям</item>
        <item>17. Движение в жилых зонах</item>
        <item>18. Приоритет маршрутных транспортных средств</item>
        <item>19. Пользование внешними световыми приборами и звуковыми сигналами</item>
        <item>20. Буксировка механических транспортных средств</item>
        <item>21. Учебная езда</item>
        <item>22. Перевозка людей</item>
        <item>23. Перевозка грузов</item>
        <item>24. Дополнительные требования к движению велосипедистов и водителей мопедов</item>
        <item>25. Дополнительные требования к движению гужевых повозок, а также прогону животных</item>
        <item>Основные положения по допуску транспортных средств к эксплуатации</item>
        <item>Перечень неисправностей и условий, при которых запрещается эксплуатация транспортных средств</item>
    </string-array>

    <string-array name="dps_talking">
        <item>1. Взаимоотношения сотрудников с участниками дорожного движения</item>
        <item>2. Остановка транспортного средства</item>
        <item>3. Составление протокола об административном правонарушении</item>
        <item>4. Отстранение от управления транспортным средством</item>
        <item>5. Освидетельствование на состояние алкогольного опьянения</item>
        <item>6. Направление на медицинское освидетельствование на состояние опьянения</item>
        <item>7. Изъятие водительского удостоверения</item>
        <item>8. Задержание транспортного средства</item>
        <item>9. Досмотр транспортного средства</item>
        <item>10. Правила возврата ВУ после утраты оснований прекращения действия права на управление транспортными средствами</item>
        <item>11. Изменения</item>
    </string-array>

    <string-array name="medicine">
        <item>1. Первая медицинская помощь при ДТП</item>
        <item>2. Первоначальные действия на месте ДТП</item>
        <item>3. Определение состояния пострадавшего</item>
        <item>4. Оказание доврачебной помощи пострадавшему, находящемуся в состоянии комы или клинической смерти</item>
        <item>5. Оказание доврачебной помощи при ранах и кровотечениях</item>
        <item>6. Оказание доврачебной помощи при ушибах, вывихах и переломах</item>
        <item>7. Оказание доврачебной помощи при утоплении, отравлении угарным газом</item>
        <item>8. Оказание доврачебной помощи при ожогах</item>
        <item>9. Перенос и транспортировка пострадавших</item>
        <item>10. Автомобильная медицинская аптечка</item>
    </string-array>

    <string-array name="road_signs">
        <item>Предупреждающие знаки</item>
        <item>Знаки приоритета</item>
        <item>Запрещающие знаки</item>
        <item>Предписывающие знаки</item>
        <item>Знаки особых предписаний</item>
        <item>Информационные знаки</item>
        <item>Знаки сервиса</item>
        <item>Знаки дополнительной информации (таблички)</item>
        <item>Горизонтальная разметка</item>
        <item>Вертикальная разметка</item>

    </string-array>

    <string-array name="road_signs_test">
        <item>Предупреждающие знаки</item>
        <item>Знаки приоритета</item>
        <item>Запрещающие знаки</item>
        <item>Предписывающие знаки</item>
        <item>Знаки особых предписаний</item>
        <item>Информационные знаки</item>
        <item>Знаки сервиса</item>
        <item>Знаки дополнительной информации (таблички)</item>
    </string-array>

    <string-array name="examinfo">
        <item>1. Документы для сдачи на права</item>
        <item>2. Медосмотр</item>
        <item>3. Категории водительских удостоверений</item>
        <item>4. Проведение теоретического экзамена</item>
        <item>5. Проведение экзамена по первоначальным навыкам управления транспортным средством</item>
        <item>6. Проведение экзамена по управлению транспортным средством в условиях дорожного движения</item>
        <item>7. Контрольная таблица для экзамена по управлению транспортным средством в условиях дорожного движения</item>
    </string-array>

    <string-array name="home">
        <item>Штрафы</item>
        <item>Дорожные знаки</item>
        <item>Медицина</item>
        <item>Диалог с ДПС</item>
        <item>Особенности экзамена</item>
        <item>Коды регионов</item>
    </string-array>


    <string-array name="tickets">
        <item>Билет №1</item>
        <item>Билет №2</item>
        <item>Билет №3</item>
        <item>Билет №4</item>
        <item>Билет №5</item>
        <item>Билет №6</item>
        <item>Билет №7</item>
        <item>Билет №8</item>
        <item>Билет №9</item>
        <item>Билет №10</item>
        <item>Билет №11</item>
        <item>Билет №12</item>
        <item>Билет №13</item>
        <item>Билет №14</item>
        <item>Билет №15</item>
        <item>Билет №16</item>
        <item>Билет №17</item>
        <item>Билет №18</item>
        <item>Билет №19</item>
        <item>Билет №20</item>
        <item>Билет №21</item>
        <item>Билет №22</item>
        <item>Билет №23</item>
        <item>Билет №24</item>
        <item>Билет №25</item>
        <item>Билет №26</item>
        <item>Билет №27</item>
        <item>Билет №28</item>
        <item>Билет №29</item>
        <item>Билет №30</item>
        <item>Билет №31</item>
        <item>Билет №32</item>
        <item>Билет №33</item>
        <item>Билет №34</item>
        <item>Билет №35</item>
        <item>Билет №36</item>
        <item>Билет №37</item>
        <item>Билет №38</item>
        <item>Билет №39</item>
        <item>Билет №40</item>
    </string-array>

    <string-array name="ticket_main">
        <item>Экзамен</item>
        <item>Умная тренировка</item>
        <item>Сложные вопросы</item>
        <item>Избранное</item>
        <item>Работа над ошибками</item>
        <item>Марафон</item>
        <item>Тест по штрафам</item>
        <item>Тренажер дорожных знаков</item>
    </string-array>

    <string-array name="themes_names">
        <item>1. Общие положения</item>
        <item>2. Общие обязанности водителей и пассажиров</item>
        <item>3. Применение специальных сигналов</item>
        <item>4. Дорожные знаки</item>
        <item>5. Дорожная разметка</item>
        <item>6. Сигналы светофора и регулировщика</item>
        <item>7. Применение аварийной сигнализации и знака аварийной остановки</item>
        <item>8. Начало движения, маневрирование</item>
        <item>9. Расположение транспортных средств на проезжей части.</item>
        <item>10. Скорость движения.</item>
        <item>11. Обгон и встречный разъезд.</item>
        <item>12. Остановка и стоянка.</item>
        <item>13. Проезд перекрестков.</item>
        <item>14. Пешеходные переходы и остановки маршрутных транспортных средств.</item>
        <item>15. Движение через железнодорожные пути.</item>
        <item>16. Движение по автомагистралям.</item>
        <item>17. Движение в жилых зонах.</item>
        <item>18. Приоритет маршрутных транспортных средств.</item>
        <item>19. Пользование внешними световыми приборами.</item>
        <item>20. Буксировка механических транспортных средств.</item>
        <item>21. Учебная езда.</item>
        <item>22. Перевозка людей.</item>
        <item>23. Перевозка грузов.</item>
        <item>24. Дополнительные требования к движению велосипедистов.</item>
        <item>25. Неисправности и условия, при которых запрещается эксплуатация транспортных средств.</item>
        <item>26. Основы безопасности дорожного движения.</item>
        <item>27. Оказание первой медицинской помощи.</item>
        <item>28. Ответственность водителя.</item>
    </string-array>

</resources>
