<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical"
    tools:context=".ui.tickets.TicketsFragmentMain">

    <Button
        android:id="@+id/buttontickets"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="6dp"
        android:background="@drawable/btn_stroke"
        android:drawableRight="@drawable/ic_action_right"
        android:fontFamily="@font/font"
        android:gravity="left|center"
        android:padding="20dp"
        android:text="@string/tickets" />

    <Button
        android:id="@+id/buttontthemestickets"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="6dp"
        android:background="@drawable/btn_stroke"
        android:drawableRight="@drawable/ic_action_right"
        android:fontFamily="@font/font"
        android:gravity="left|center"
        android:padding="20dp"
        android:text="@string/themes"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="@string/modes"
        android:textColor="?attr/text_color"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ticketmainRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>