<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".ui.tickets.modes.TrainingFragment">

    <TextView
        android:id="@+id/znayu_otlichno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/know_awesome"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/otlichno_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/znayu_otlichno"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otlichno_count"
        android:gravity="center"
        android:text="@string/from_800_questions"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/circle_training"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:indeterminateOnly="false"
        android:progress="60"
        android:progressDrawable="@drawable/circle_progressbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/not_know_card"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/circle_training"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/background_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/font1"
                android:gravity="left"
                android:text="@string/not_know" />

            <TextView
                android:id="@+id/count_not_know"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/font"
                android:gravity="right" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_training"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/not_know_card"
        android:background="@color/colorSettings" />

    <androidx.cardview.widget.CardView
        android:id="@+id/know_card"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/view_training"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/background_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/font1"
                android:gravity="left|center"
                android:text="@string/know" />

            <TextView
                android:id="@+id/count_know"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/font"
                android:gravity="right|center" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/know_good_card"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/know_card"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/background_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/font1"
                android:gravity="left|center"
                android:text="@string/know_good" />

            <TextView
                android:id="@+id/count_know_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/font"
                android:gravity="right|center" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/know_awesome_card"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/know_good_card"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/background_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/font1"
                android:gravity="left|center"
                android:text="@string/know_awesome" />

            <TextView
                android:id="@+id/count_know_awesome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/font"
                android:gravity="right|center" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/training_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/know_awesome_card"
        android:layout_margin="20dp"
        android:background="@drawable/btn_exam"
        android:text="@string/begin_training"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>