<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".ui.screens.tickets.Ticket">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horizontalRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:id="@+id/question_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontalRV"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/questionnumbertxt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/font"
                    android:gravity="left"
                    android:textSize="18sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/favourites_card"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/favourites_image"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/star_pressed" />

                        <TextView
                            android:id="@+id/favourites_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/font"
                            android:gravity="center"
                            android:text="@string/delete_from_favourite"
                            android:textColor="@color/blue_colorPrimaryDark" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <ImageView
                    android:id="@+id/db_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@+id/questionnumbertxt" />

                <TextView
                    android:id="@+id/db_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/db_image"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/font"
                    android:gravity="center"
                    android:text="@string/question" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ansRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_card"
            android:layout_marginTop="5dp" />


        <Button
            android:id="@+id/btnnext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ansRV"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_exam"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
            android:fontFamily="@font/font"
            android:paddingRight="10dp"
            android:text="@string/next"
            android:textColor="@color/white" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnnext"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="0dp"
            app:contentPaddingLeft="5dp">

            <TextView
                android:id="@+id/explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</ScrollView>
